Bug fixes
Bug: Reset button was not responsive.

Changed measurement unit of width from % to rem.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -22,7 +22,7 @@
     background-color: white;
     border: 0.1rem solid black;
     border-radius: 1rem;
-    width: 7%;
+    width: 6rem;
     height: 2.5rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
